--- a/app/src/main/res/layout/row_sensors.xml
+++ b/app/src/main/res/layout/row_sensors.xml
@@ -1,57 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:padding="5dp">
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cv_ram_graph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="@color/card_view_bg"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp" >
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
         <ImageView
                 android:id="@+id/iv_sensor_image"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:contentDescription="@null"
                 android:src="@mipmap/ic_launcher"
-                android:tint="@color/colorAccent" />
+                android:tint="@color/colorAccent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
                 android:id="@+id/tv_sensor_name_row"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@id/iv_sensor_image"
-                android:drawablePadding="85dp"
+                android:layout_margin="5dp"
                 android:ellipsize="end"
                 android:maxEms="15"
                 android:maxLines="4"
+                android:gravity="center"
                 android:textColor="@color/primary_text"
                 android:textSize="14sp"
-                tools:targetApi="jelly_bean" />
+                app:layout_constraintStart_toStartOf="@id/iv_sensor_image"
+                app:layout_constraintEnd_toEndOf="@id/iv_sensor_image"
+                app:layout_constraintTop_toBottomOf="@id/iv_sensor_image"/>
 
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_move_to_the_next_page_symbol"
-                android:tint="@color/secondary_text" />
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:background="@color/divider" />
-</LinearLayout>
+</android.support.v7.widget.CardView>
