--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -73,22 +73,22 @@
 
     <!-- Main Activity -->
     <color name="bottom_sheet_background">#26272F</color>
-    <color name="dashboard">#ff8a65</color>
-    <color name="os">#f06292</color>
-    <color name="sensor">#ba68c8</color>
-    <color name="cpu">#9575cd</color>
-    <color name="battery">#7986cb</color>
-    <color name="network">#64b5f6</color>
+    <color name="dashboard">#c85a54</color>
+    <color name="os">#A4C639</color>
+    <color name="sensor">#ff9e80</color>
+    <color name="cpu">#ea80fc</color>
+    <color name="battery">#b388ff</color>
+    <color name="network">#8c9eff</color>
     <color name="sim">#4dd0e1</color>
     <color name="camera">#4db6ac</color>
     <color name="storage">#81c784</color>
     <color name="bluetooth">#aed581</color>
-    <color name="display">#dce775</color>
-    <color name="features">#ffd54f</color>
-    <color name="user">#ffb74d</color>
-    <color name="system">#ff8a65</color>
+    <color name="display">#82b1ff</color>
+    <color name="features">#80d8ff</color>
+    <color name="user">#ffe57f</color>
+    <color name="system">#ffd180</color>
     <color name="touchtest">#a1887f</color>
-    <color name="gpu_ram">#90a4ae</color>
+    <color name="gpu_ram">#b9f6ca</color>
     <!-- card -->
     <color name="bottomsheet_card_bg">#3B3C49</color>
     <color name="card_view_bg">#3B3C49</color>
