--- a/app/src/main/res/drawable/touch_test_background.xml
+++ b/app/src/main/res/drawable/touch_test_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-            android:centerColor="#4989f5"
-            android:endColor="#4f63f8"
-            android:startColor="#42aaf4" />
+            android:centerColor="#8c9eff"
+            android:endColor="#5870cb"
+            android:startColor="#c0cfff" />
     <size
             android:width="100dp"
             android:height="50dp" />
